<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/r80"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="@dimen/horizontal_layout"
                    android:layout_marginLeft="@dimen/horizontal_layout"
                    android:background="#4D000000"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="Peswat R80"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white"
                    android:drawableLeft="@drawable/ic_airplanemode_active_white_24dp"
                    android:drawablePadding="8dp"/>


            </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginTop="@dimen/vertical_layout"
            android:text="B.J Habibie"
            android:textColor="@android:color/black"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="Presiden Ke 3 Indonesia"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:text="@string/contet_text"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginTop="@dimen/vertical_layout">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"
                    android:text="Nama"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/nama"/>
        </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="@dimen/horizontal_layout"
                    android:text="TTL"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/TTL"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"
                    android:text="Jabatan"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/jabatan"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/horizontal_layout"
                    android:text="Penemuan"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/penemuan"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:text="@string/donasi"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/r80"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/vertical_layout"
                android:layout_marginRight="@dimen/horizontal_layout"
                android:src="@drawable/logo"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:layout_toEndOf="@+id/r80"
                android:layout_toRightOf="@+id/r80"
                android:text="@string/ajakan"/>
    </RelativeLayout>
        <Button
            android:id="@+id/btnDonasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="@dimen/horizontal_layout"
            android:layout_marginRight="@dimen/horizontal_layout"
            android:layout_marginBottom="@dimen/vertical_layout"
            android:background="#3434FA"
            android:text="Donasi"/>

    </LinearLayout>


</ScrollView>